Fix regressions from the abacus-common 8.0.0 bump and complete the d59a145 behavior changes; review-driven hardening
Baseline at d59a145 was red: 80 failing tests and a doclint-broken
javadoc build. Now 5161 tests
green, javadoc:jar clean, docs/ai regenerated.

Regressions from abacus-common 7.9.4 -> 8.0.0
- N.equals became shallow: array-valued Binary/In/Between conditions
broke the equals/hashCode
  contract. Use N.deepEquals in Binary, AbstractIn, AbstractBetween and
SubQuery raw bindings.
- NamingPolicy.convert now strips leading/trailing '_' runs (_id -> id,
_1 -> 1). Added
  QueryUtil.convertIdentifier (preserves the runs per dot-segment) and
routed every rendering path
  through it: SqlExpression.toSql,
AbstractQueryBuilder.normalizeColumnName and all structured
  conditions (Binary, AbstractIn, AbstractBetween, AbstractInSubQuery,
SubQuery).

Half-finished d59a145 changes
- Empty AND/OR are complete predicates (1 = 1 / 1 = 0): removed the
Junction branch from
  AbstractCondition.isEmptyPredicate, SqlBuilder.appendCondition renders
the identity, and the
  "or empty Junction" @throws wording is swept from
Filters/Criteria/Join/clauses/AQB.
- New raw SubQuery(sql, bindings) lost its bindings on every builder
path. Bindings are now merged
  (PARAMETERIZED), renamed to generated named parameters (NAMED/IBATIS)
or inlined as literals
  (RAW_SQL). Placeholder positions come from ParsedSql's own
classification
  (positionalParameterOffsets), so JSON '?' operators are never
rewritten.
- IS / IS NOT with a Boolean bound "x IS ?": now normalized to the
TRUE/FALSE keyword expression;
  TRUE/FALSE registered in both keyword registries so they are not
case-converted.
- Single-arg qualified-join ctors and Filters/Criteria.Builder
join/innerJoin/leftJoin/rightJoin/
  fullJoin(String) always throw since d59a145: marked @Deprecated with
redirecting Javadoc.

SqlParser
- '#' classification after ')' recursed without memoization (O(2^k); a
40-row INSERT with a
  comment per row